navbar fixed on mobile and tablet

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,7 +51,8 @@ label {
   padding: 2em;
 }
 
-/* ------------------ */
+/* ----------CONTAINERS-------- */
+
 .d-flex {
   flex-wrap: wrap;
   justify-content: space-around;
@@ -261,6 +262,7 @@ button {
     padding-right: 1em;
   }
 
+
   #nav {
     padding: 0;
     justify-content: end;
@@ -290,12 +292,30 @@ button {
   .navbar-toggler {
     position: absolute;
     top: 5px;
+    width: 15%;
 
   }
 
+  
+
+
   label {
     font-size: 100%;
+    text-align: center;
 
+
+  }
+
+ 
+}
+
+@media screen and (min-width: 509px) {
+ 
+
+  .navbar-toggler {
+    position: absolute;
+    top: 5px;
+    width: 15%;
 
   }
 }
